<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Menu principal -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vendas"
            android:icon="@drawable/ic_vendas"
            android:title="@string/menu_vendas" />
        <item
            android:id="@+id/nav_estoque"
            android:icon="@drawable/ic_estoque"
            android:title="@string/menu_estoque" />
        <item
            android:id="@+id/nav_servico"
            android:icon="@drawable/ic_servico"
            android:title="@string/menu_servico" />
        <item
            android:id="@+id/nav_relatorio"
            android:icon="@drawable/ic_relatorio"
            android:title="@string/menu_relatorio" />
    </group>

    <group android:id="@+id/menu_preferences_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_preferences"
            android:title="@string/menu_preferences"
            android:checkable="false" />
    </group>

    <!-- Opções de tema como itens individuais com comportamento de seleção única -->
    <group android:id="@+id/menu_themes_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_theme_header"
            android:title="@string/menu_themes"
            android:icon="@drawable/ic_palette"
            android:checkable="false" />
        <item
            android:id="@+id/nav_theme_system"
            android:title="@string/theme_system"
            android:checked="true" />
        <item
            android:id="@+id/nav_theme_light"
            android:title="@string/theme_light" />
        <item
            android:id="@+id/nav_theme_dark"
            android:title="@string/theme_dark" />
        <item
            android:id="@+id/nav_theme_isabella"
            android:title="@string/theme_isabella" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>